--- a/TestAutoscaling/kangooweb-with-lb.yaml
+++ b/TestAutoscaling/kangooweb-with-lb.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: kangooweb-deployment
+#  namespace: aks-hackaton-paris
 spec:
   replicas: 1
   strategy:
@@ -28,6 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kangooweb-svc
+#  namespace: aks-hackaton-paris
 spec:
   type: LoadBalancer
   ports:
