--- a/TestAutoscaling/traefik-ingress.yaml
+++ b/TestAutoscaling/traefik-ingress.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: traefik-ingress-controller
-  namespace: kube-system
+  namespace: traefik
 ---
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: traefik-ingress-controller
-  namespace: kube-system
+  namespace: traefik
   labels:
     k8s-app: traefik-ingress-lb
 spec:
@@ -42,7 +42,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: traefik-ingress-service
-  namespace: kube-system
+  namespace: traefik
 spec:
   selector:
     k8s-app: traefik-ingress-lb
@@ -51,6 +51,9 @@ spec:
       port: 80
       name: web
     - protocol: TCP
+      port: 443
+      name: web
+    - protocol: TCP
       port: 8080
       name: admin
-  type: NodePort
+  type: LoadBalancer
